# vendrtk

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/lib/pipelines/: Cargo.toml
crates/lib/pipelines/src/: error.rs
crates/lib/pipelines/src/prebuilt/: mod.rs
crates/lib/pipelines/src/traits/: mod.rs  (+3 more)
crates/lib/vendrtk-azure/: Cargo.toml
crates/lib/vendrtk-azure/src/: auth.rs  error.rs  lib.rs  scope.rs
crates/lib/vendrtk-azure/src/document_intelligence/: api_version.rs  client.rs  config.rs  mod.rs  models.rs  prebuilt_model.rs
crates/lib/vendrtk-azure/src/foundry/: client.rs  models.rs
crates/lib/vendrtk-core/: Cargo.toml
crates/lib/vendrtk-core/src/: lib.rs
crates/lib/vendrtk-ocr/: Cargo.toml
crates/lib/vendrtk-ocr/src/: error.rs  lib.rs
crates/lib/vendrtk-ocr/src/azure_document_intelligence/: auth.rs  client.rs  mod.rs  prebuilt_model.rs
crates/lib/vendrtk-ocr/src/traits/: client.rs  mod.rs  ocr_processed_document.rs
crates/lib/vendrtk-parsers/: Cargo.toml
crates/lib/vendrtk-parsers/src/: error.rs  lib.rs
crates/lib/vendrtk-parsers/src/models/: doc_type.rs  invoice.rs  mod.rs  sow.rs
crates/lib/vendrtk-parsers/src/prebuilt/: mod.rs
crates/lib/vendrtk-parsers/src/prebuilt/classify/: mod.rs  parser.rs  schemas.rs
crates/lib/vendrtk-parsers/src/prebuilt/invoice/llm/: client.rs  mod.rs  parser.rs  schemas.rs
crates/lib/vendrtk-parsers/src/prebuilt/sow/llm/: mod.rs  parser.rs  schemas.rs
crates/lib/vendrtk-parsers/src/traits/: llm_client.rs  mod.rs  parsed_document.rs  parser.rs
crates/lib/vendrtk-pipelines/: Cargo.toml
crates/lib/vendrtk-pipelines/src/: error.rs  lib.rs
crates/lib/vendrtk-pipelines/src/prebuilt/vendor_reconciliation/: context.rs  input.rs  output.rs  pipeline.rs
crates/lib/vendrtk-pipelines/src/prebuilt/vendor_reconciliation/stages/: classify.rs  ingest.rs  mod.rs  ocr.rs  parse_invoice.rs  parse_sow.rs
crates/lib/vendrtk-pipelines/src/traits/: mod.rs  pipeline.rs  pipeline_context.rs  pipeline_stage.rs
crates/lib/vendrtk-storage/: Cargo.toml
crates/lib/vendrtk-storage/src/: error.rs  lib.rs  utils.rs
docs/: ARCHITECTURE.md  PROJECT_REQS.md
public/: index.html
(+28 files in other folders)
