[workspace]
resolver = "3"
members = [
    # Bins
    "crates/bin/vendrtk-server",
    # Libs
    "crates/lib/vendrtk-core",
    "crates/lib/vendrtk-storage",
    "crates/lib/vendrtk-ocr",
    "crates/lib/vendrtk-parsers",
    "crates/lib/vendrtk-azure", "crates/lib/vendrtk-pipelines",
]

[profile.dev]
opt-level = 3
