[package]
name = "vendrtk-azure"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }
azure_core = "1.0.0"
azure_identity = "1.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
tracing = "0.1.44"
rig = "0.39.0"
schemars = "1.2.1"
vendrtk-ocr = { path = "../../lib/vendrtk-ocr" }
vendrtk-parsers = { path = "../../lib/vendrtk-parsers" }