[package]
name = "vendrtk-ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
chrono = { version = "0.4", features = ["serde"] }
azure_core = "1.0.0"
azure_identity = "1.0.0"
tokio = { version = "1.52", features = ["time"] }
